Bug 482240 - "Launch Bug Report Wizard" does nothing
Summary: "Launch Bug Report Wizard" does nothing
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kxmlgui
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: HI normal
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords: regression
: 483319 483829 493604 496727 498811 499142 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-03-02 17:22 UTC by faveoled
Modified: 2025-04-03 09:18 UTC (History)
15 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.12
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description faveoled 2024-03-02 17:22:42 UTC
STEPS TO REPRODUCE
1. Open dolphin
2. Click Menu button
3. Help
4. Click "Report Bug..."
5. Click "Launch Bug Report Wizard"

OBSERVED RESULT
Nothing is opened

EXPECTED RESULT
Something opens

SOFTWARE/OS VERSIONS
KDE Neon 2024 02 28
Comment 1 Nicolas Fella 2024-03-02 18:21:21 UTC
Looks like the same cause as described in https://bugs.kde.org/show_bug.cgi?id=479397#c4
Comment 2 Patrick Silva 2024-03-12 15:53:57 UTC
*** Bug 483319 has been marked as a duplicate of this bug. ***
Comment 3 Nicolas Fella 2024-03-17 13:45:57 UTC
*** Bug 483829 has been marked as a duplicate of this bug. ***
Comment 4 Sergio 2024-05-31 07:06:47 UTC Comment hidden (spam)
Comment 5 Patrick Silva 2024-10-17 12:19:08 UTC Comment hidden (spam)
Comment 6 0BADC0DE 2024-10-17 13:26:48 UTC Comment hidden (spam)
Comment 7 Nate Graham 2024-10-17 16:14:16 UTC
Should be fixed by https://invent.kde.org/frameworks/kxmlgui/-/merge_requests/237.
Comment 8 John Kizer 2024-12-01 05:54:32 UTC
*** Bug 496727 has been marked as a duplicate of this bug. ***
Comment 9 Fabio 2025-01-21 14:47:48 UTC
*** Bug 498811 has been marked as a duplicate of this bug. ***
Comment 10 Fabio 2025-01-21 14:53:55 UTC
*** Bug 493604 has been marked as a duplicate of this bug. ***
Comment 11 Filip 2025-01-26 19:15:10 UTC
*** Bug 499142 has been marked as a duplicate of this bug. ***
Comment 12 Steffen W. 2025-02-04 15:25:07 UTC
(In reply to Nate Graham from comment #7)
> Should be fixed by
> https://invent.kde.org/frameworks/kxmlgui/-/merge_requests/237.

Not sure what's going on here but in KDE Framworks version 6.10.0 this is still a problem and the PR doesn't seem to have been merged?
Comment 13 Martin Tlustos 2025-02-04 16:24:27 UTC
As of 
Operating System: KDE neon 6.2
KDE Plasma Version: 6.2.5
KDE Frameworks Version: 6.10.0
Qt Version: 6.8.1
Kernel Version: 6.8.0-52-generic (64-bit)
Graphics Platform: Wayland
Processors: 6 × AMD Ryzen 5 4500U with Radeon Graphics
Memory: 15,0 GiB of RAM
Graphics Processor: AMD Radeon Graphics
Manufacturer: Acer
Product Name: Aspire A515-44G
System Version: V1.12

it still doesn't do anything on my system.
Comment 14 Justin Zobel 2025-02-16 08:52:19 UTC
The fix hasn't been merged, it's still under review. This bug report will move to RESOLVED once it's fixed.
Comment 15 0BADC0DE 2025-02-16 11:48:05 UTC
The bug is still there as of:
OS: ArchLinux
Plasma Version : 6.3.0-3
KDE Version : 24.12.2-1
Frameworks Version : 6.10.0-1
Qt5 Version : 5.15.16+kde+r130-3
Qt6 Version : 6.8.2-2
Comment 16 Steffen W. 2025-03-05 13:17:20 UTC
The bug is still exists as of:
Operating System: Arch Linux 
KDE Plasma Version: 6.3.2
KDE Frameworks Version: 6.11.0
Qt Version: 6.8.2
Kernel Version: 6.13.5-arch1-1 (64-bit)
Graphics Platform: Wayland
Comment 17 Nicolas Fella 2025-03-07 12:42:45 UTC
Git commit 8049c3684838416854e00294dbcf3d0945f10d8c by Nicolas Fella, on behalf of Carl Schwan.
Committed on 07/03/2025 at 12:36.
Pushed by nicolasfella into branch 'master'.

Delay accepting the bugreport dialog

We call QDesktopServices::openUrl() and immediately accept the dialog,
which closes the window.

This breaks the xdg-activation handling in openUrl, which relies on the window
being alive, and causes the URL to not be opened.

To work around this slightly delay the closing of the window

M  +11   -1    src/kbugreport.cpp

https://invent.kde.org/frameworks/kxmlgui/-/commit/8049c3684838416854e00294dbcf3d0945f10d8c