Delay accepting the bugreport dialog

We call QDesktopServices::openUrl() and immediately accept the dialog,
which closes the window.

This breaks the xdg-activation handling in openUrl, which relies on the window
being alive, and causes the URL to not be opened.

To work around this slightly delay the closing of the window

BUG: 482240